--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.imixs.jwt</groupId>
 	<artifactId>imixs-jwt</artifactId>
 	<name>Imixs-JWT</name>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.0.2</version>
 
 
 	<description>
@@ -40,7 +38,7 @@
 		<connection>scm:git:https://github.com/imixs/imixs-jwt.git</connection>
 		<developerConnection>scm:git:https://github.com/imixs/imixs-jwt.git</developerConnection>
 		<url>https://github.com/imixs/imixs-jwt/</url>
-		<tag>HEAD</tag>
+		<tag>imixs-jwt-1.0.2</tag>
 	</scm>
 
 	<issueManagement>
