--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>org.imixs.jwt</groupId>
 	<artifactId>imixs-jwt</artifactId>
 	<name>Imixs-JWT</name>
-	<version>1.1.1</version>
+	<version>2.0.0-SNAPSHOT</version>
 
 
 	<description>
@@ -38,7 +38,7 @@
 		<connection>scm:git:git@github.com:imixs/imixs-jwt.git</connection>
 		<developerConnection>scm:git:git@github.com:imixs/imixs-jwt.git</developerConnection>
 		<url>https://github.com/imixs/imixs-jwt/</url>
-		<tag>imixs-jwt-1.1.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
