--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 		</license>
 	</licenses>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jakarta.version>10.0.0</jakarta.version>
+	</properties>
+
 	<repositories>
 		<repository>
 			<id>snapshots-repo</id>
@@ -78,8 +83,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>11</source>
+					<target>11</target>
 				</configuration>
 			</plugin>
 
@@ -218,14 +223,14 @@
 	</profiles>
 
 	<dependencies>
-		<!-- JEE dependencies -->
-		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-api</artifactId>
-			<version>6.0</version>
-			<scope>provided</scope>
-		</dependency>
 
+		<!-- Jakarta EE -->
+		<dependency>
+		    <groupId>jakarta.platform</groupId>
+		    <artifactId>jakarta.jakartaee-api</artifactId>
+		    <version>${jakarta.version}</version>
+		    <scope>provided</scope>
+		</dependency>
 
 		<!-- JUnit Tests -->
 		<dependency>
@@ -235,21 +240,24 @@
 			<scope>test</scope>
 		</dependency>
 
-
-		<!-- JSON Parser -->
 		<dependency>
-			<groupId>javax.json</groupId>
-			<artifactId>javax.json-api</artifactId>
-			<version>1.1</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.glassfish</groupId>
-			<artifactId>javax.json</artifactId>
-			<version>1.1</version>
+			<groupId>org.eclipse.parsson</groupId>
+			<artifactId>jakarta.json</artifactId>
+			<version>1.1.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.glassfish.jaxb</groupId>
+		    <artifactId>jaxb-runtime</artifactId>
+		    <version>3.0.0</version>
+		    <scope>test</scope>
+		</dependency>
+    	<dependency>
+	       <groupId>jakarta.xml.bind</groupId>
+	       <artifactId>jakarta.xml.bind-api</artifactId>
+	       <version>3.0.0</version>
+	       <scope>test</scope>
+	    </dependency>
 	</dependencies>
 
 	<!-- Distributen Management oss.sonatype.org -->
